[package]
name = "blogserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
pulldown-cmark = "0.10.0"
serde_yaml = "0.9.33"
syntect = "5.2.0"
tower-http = { version = "0.5.2", features = ["fs"] }
